--- a/src/main/resources/templates/editEmail.html
+++ b/src/main/resources/templates/editEmail.html
@@ -20,7 +20,7 @@
                         <!-- new email -->
                         <div class="form-group">
                             <label for="editedEmail">New E-mail:</label>
-                            <input class="form-control" type="email" name="editedEmail" id="editedEmail" placeholder="enter the new email" required th:pattern="${patterns.email}">
+                            <input class="form-control" type="email" name="editedEmail" id="editedEmail" placeholder="enter the new email" required th:pattern="${@environment.getProperty('validation.regex.email')}">
                             <div class="invalid-feedback">Please fill out this field with your email</div>
                         </div>
                         <!-- password -->
