--- a/src/main/resources/templates/bookForm.html
+++ b/src/main/resources/templates/bookForm.html
@@ -23,21 +23,21 @@
                                 <!-------------------------------------------------------------------------Title-->
                                 <div class="form-group">
                                     <label for="title">Title:</label>
-                                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" th:pattern="${patterns.textBasic}">
+                                    <input class="form-control" type="text" th:field="*{title}" id="title" placeholder="enter title" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('title')"></div>
                                 <!-------------------------------------------------------------------------Publisher-->
                                 <div class="form-group">
                                     <label for="publisher">Publisher:</label>
-                                    <input class="form-control" type="text" th:field="*{publisherName}" id="publisher" placeholder="enter publisher name" th:pattern="${patterns.textBasic}">
+                                    <input class="form-control" type="text" th:field="*{publisherName}" id="publisher" placeholder="enter publisher name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('publisherName')"></div>
                                 <!-------------------------------------------------------------------------Year-->
                                 <div class="form-group">
                                     <label for="year">Year of Publication:</label>
-                                    <input class="form-control" type="text" th:field="*{year}" id="year" placeholder="enter year" th:pattern="${patterns.year}">
+                                    <input class="form-control" type="text" th:field="*{year}" id="year" placeholder="enter year" th:pattern="${@environment.getProperty('validation.regex.year')}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('year')"></div>
@@ -78,7 +78,7 @@
                                 <!-------------------------------------------------------------------------Description-->
                                 <div class="form-group">
                                     <label for="description">Description:</label>
-                                    <textarea class="form-control" rows="5" th:field="*{description}" id="description" placeholder="enter description" th:pattern="${patterns.textLong}"></textarea>
+                                    <textarea class="form-control" rows="5" th:field="*{description}" id="description" placeholder="enter description" th:pattern="${@environment.getProperty('validation.regex.text-long')}"></textarea>
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('description')"></div>
@@ -90,8 +90,8 @@
                                     <div id="author0">
                                         <label for="authorFirstName0">Author/s:</label>
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName0}" id="authorFirstName0" placeholder="First Name" th:pattern="${patterns.textBasic}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName0}" id="authorLastName0" placeholder="Last Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName0}" id="authorFirstName0" placeholder="First Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName0}" id="authorLastName0" placeholder="Last Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-info" style="display: block" type="button" id="showAuthor1" title="Add Author"><i class="fas fa-plus"></i></button>
                                             </div>
@@ -103,8 +103,8 @@
                                     <!------------------------------------------------Author 1-->
                                     <div id="author1" style="display: none">
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName1}" id="authorFirstName1" placeholder="First Name" th:pattern="${patterns.textBasic}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName1}" id="authorLastName1" placeholder="Last Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName1}" id="authorFirstName1" placeholder="First Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName1}" id="authorLastName1" placeholder="Last Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor2" title="Add Author"><i class="fas fa-plus"></i></button>
                                                 <button class="btn btn-outline-secondary" style="display: none" type="button" id="hideAuthor1" title="Delete Author"><i class="fas fa-minus"></i></button>
@@ -117,8 +117,8 @@
                                     <!------------------------------------------------Author 2-->
                                     <div id="author2" style="display: none">
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName2}" id="authorFirstName2" placeholder="First Name" th:pattern="${patterns.textBasic}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName2}" id="authorLastName2" placeholder="Last Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName2}" id="authorFirstName2" placeholder="First Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName2}" id="authorLastName2" placeholder="Last Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor3" title="Add Author"><i class="fas fa-plus"></i></button>
                                                 <button class="btn btn-outline-secondary" style="display: none" type="button" id="hideAuthor2" title="Delete Author"><i class="fas fa-minus"></i></button>
@@ -131,8 +131,8 @@
                                     <!------------------------------------------------Author 3-->
                                     <div id="author3" style="display: none">
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName3}" id="authorFirstName3" placeholder="First Name" th:pattern="${patterns.textBasic}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName3}" id="authorLastName3" placeholder="Last Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName3}" id="authorFirstName3" placeholder="First Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName3}" id="authorLastName3" placeholder="Last Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-info" style="display: none" type="button" id="showAuthor4" title="Add Author"><i class="fas fa-plus"></i></button>
                                                 <button class="btn btn-outline-secondary" style="display: none" type="button" id="hideAuthor3" title="Delete Author"><i class="fas fa-minus"></i></button>
@@ -145,8 +145,8 @@
                                     <!------------------------------------------------Author 4-->
                                     <div id="author4" style="display: none">
                                         <div class="input-group mb-3">
-                                            <input class="form-control" type="text" th:field="*{authorFirstName4}" id="authorFirstName4" placeholder="First Name" th:pattern="${patterns.textBasic}">
-                                            <input class="form-control" type="text" th:field="*{authorLastName4}" id="authorLastName4" placeholder="Last Name" th:pattern="${patterns.textBasic}">
+                                            <input class="form-control" type="text" th:field="*{authorFirstName4}" id="authorFirstName4" placeholder="First Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                                            <input class="form-control" type="text" th:field="*{authorLastName4}" id="authorLastName4" placeholder="Last Name" th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
                                             <div class="input-group-append">
                                                 <button class="btn btn-outline-secondary" style="display: none" type="button" id="hideAuthor4" title="Delete Author"><i class="fas fa-minus"></i></button>
                                             </div>
@@ -159,7 +159,7 @@
                                 <!-------------------------------------------------------------------------ISBN-->
                                 <div class="form-group">
                                     <label for="isbn">ISBN:</label>
-                                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required th:pattern="${patterns.isbnCode}">
+                                    <input class="form-control" type="text" th:field="*{isbn}" id="isbn" placeholder="enter isbn" required th:pattern="${@environment.getProperty('validation.regex.isbn-code')}">
                                     <div class="invalid-feedback">Please fill out this field with a valid ISBN</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('isbn')"></div>
@@ -176,21 +176,21 @@
                                 <!-------------------------------------------------------------------------Pages-->
                                 <div class="form-group">
                                     <label for="numPages">Number of Pages:</label>
-                                    <input class="form-control" type="number" th:field="*{numPages}" id="numPages" placeholder="enter number of pages" value="1" th:min="${numbers.pagesMin}" th:max="${numbers.pagesMax}">
+                                    <input class="form-control" type="number" th:field="*{numPages}" id="numPages" placeholder="enter number of pages" th:min="${@environment.getProperty('validation.numeric.pages-min')}" th:max="${@environment.getProperty('validation.numeric.pages-max')}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('numPages')"></div>
                                 <!-------------------------------------------------------------------------Stock-->
                                 <div class="form-group">
                                     <label for="stock">Units in Stock:</label>
-                                    <input class="form-control" type="number" th:field="*{stock}" id="stock" placeholder="enter stock" th:min="${numbers.stockMin}" th:max="${numbers.stockMax}">
+                                    <input class="form-control" type="number" th:field="*{stock}" id="stock" placeholder="enter stock" th:min="${@environment.getProperty('validation.numeric.stock-min')}" th:max="${@environment.getProperty('validation.numeric.stock-max')}">
                                     <div class="invalid-feedback">Please fill out this field correctly</div>
                                 </div>
                                 <div th:replace="fragments/components::backendSpecificObjectFieldErrors('stock')"></div>
                                 <!-------------------------------------------------------------------------Price-->
                                 <label for="price">Price:</label>
                                 <div class="input-group mb-3">
-                                    <input class="form-control" type="text" th:field="*{price}" id="price" placeholder="enter price" th:pattern="${patterns.price}">
+                                    <input class="form-control" type="text" th:field="*{price}" id="price" placeholder="enter price" th:pattern="${@environment.getProperty('validation.regex.price')}">
                                     <div class="input-group-append">
                                         <span class="input-group-text">€</span>
                                     </div>
