--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -9,7 +9,9 @@
             <header th:replace="fragments/components::header"></header>
             <!-- main categories -->
             <div th:replace="fragments/components::mainCatsNavBar"></div>
+            <!-- title -->
             <div th:replace="fragments/components::title(text = 'Cart')"></div>
+            <!-- main content -->
             <div class="row">
                 <div class="col-sm-2 bg-white"></div>
                 <div class="col-sm-8 bg-light">
@@ -47,9 +49,12 @@
                 </div>
                 <div class="col-sm-2 bg-white"></div>
             </div>
+            <!-- footer -->
             <footer th:replace="fragments/components::footer"></footer>
         </div>
         <script th:src="@{/js/enableTooltips.js}"></script>
+        <!-- ajax cart -->
+        <a th:href="@{/login}" id="loginLink" style="display: none"></a>
         <script th:src="@{/js/ajaxCart.js}"></script>
     </body>
 </html>
