--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -98,7 +98,10 @@
             <div th:replace="fragments/components::footer"></div>
         </div>
         <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
+        <!-- ajax cart -->
+        <a th:href="@{/login}" id="loginLink" style="display: none"></a>
         <script th:src="@{/js/ajaxCart.js}"></script>
+        <!-- pagination -->
         <script th:replace="fragments/components::paginationMvcVariables"></script>
         <script th:src="@{/js/paginationLinks.js}"></script>
         <script th:src="@{/js/paginationLegend.js}"></script>
