-added snackbar message on addBook to cart action. Closes #58 -tooltips customized -user/admin have different book options at /home -externalized baseUrl on modal functionality -login page links organization

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -104,6 +104,8 @@
                     </div>
                 </div>
             </div>
+            <!-- snackbar -->
+            <div th:replace="fragments/components::snackbar"></div>
             <!-- footer -->
             <div th:replace="fragments/components::footer"></div>
         </div>
