--- a/src/main/resources/templates/images.html
+++ b/src/main/resources/templates/images.html
@@ -116,8 +116,8 @@
         <script th:src="@{/js/paginationLinks.js}"></script>
         <script th:src="@{/js/paginationLegend.js}"></script>
         <!-- modal functionality -->
+        <script th:utext="'let baseUrl = \'' + ${@environment.getProperty('host-address')} + ${#servletContext.contextPath} + '/admin/deleteImage/\';'"></script>
         <script>
-            let baseUrl = "http://localhost:8080/firstmarket/admin/deleteImage/";
             document.addEventListener("DOMContentLoaded", function() {
                 document.dispatchEvent(new CustomEvent('custom-htmlReady'));
             }, false);
