--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -139,6 +139,9 @@
             </div>
         </div>
 
+        <!-- snackbar -->
+        <div th:fragment="snackbar" id="snackbar">Book successfully added to user cart</div>
+
         <!-- Save button -->
         <button th:fragment="saveButton" class="btn btn-info px-5 my-3" type="submit">Save</button>
 
