validation classes refactor

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -68,7 +68,7 @@
                             </div>
                             <!-- pages -->
                             <div>
-                                <p><strong>Pages: </strong><span th:text="${book.numPages}"></span></p>
+                                <p><strong>Pages: </strong><span th:text="${book.pages}"></span></p>
                             </div>
                             <!-- price -->
                             <div>
