--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -32,7 +32,7 @@
                             <div class="col-sm-4">
                                 <form class="needs-validation" novalidate th:action="@{/books}" method="GET" action="#">
                                     <div class="input-group mt-5">
-                                        <input class="form-control form-control-sm" type="text" name="q" placeholder="title, ISBN, author, publisher..." required th:pattern="${@environment.getProperty('validation.regex.text-basic')}">
+                                        <input class="form-control form-control-sm" type="text" name="q" placeholder="title, ISBN, author, publisher..." required />
                                         <div class="input-group-append">
                                             <button class="btn btn-info btn-sm" type="submit">
                                                 <i class="fas fa-search"></i>
@@ -109,7 +109,6 @@
             <div th:replace="fragments/components::footer"></div>
         </div>
         <script th:src="@{/js/enableTooltips.js}"></script>
-        <script th:src="@{/js/disableFormSubmissionOnInvalidField.js}"></script>
         <!-- ajax cart -->
         <a th:href="@{/login}" id="loginLink" style="display: none"></a>
         <script th:src="@{/js/ajaxCart.js}"></script>
