--- a/src/main/resources/templates/deleteUser.html
+++ b/src/main/resources/templates/deleteUser.html
@@ -12,15 +12,15 @@
             <div class="row">
                 <div class="col-sm-3 bg-white"></div>
                 <div class="col-sm-6 bg-light">
-                    <div th:replace="fragments/components::backendRequestParamError"></div>
-                    <form class="needs-validation" novalidate th:action="@{/user/deleteUser}" method="POST" action="#">
+                    <form class="needs-validation" novalidate th:action="@{/user/deleteUser}" th:object="${userDeletionForm}" method="POST" action="#">
+                        <div th:replace="fragments/components::backendGenericObjectFieldErrors"></div>
                         <!-- deletion reason -->
                         <div class="d-flex flex-column pt-3">
                             <div>
                                 <p>Please, tell us why you are closing your account:</p>
                             </div>
                             <div class="pretty p-default p-round p-thick mb-3" th:each="dr : ${deletionReasons}">
-                                <input type="radio" name="deletionReason" th:value="${dr.ordinal()}" th:id="'dr-' + ${dr.ordinal()}"/>
+                                <input type="radio" th:field="*{deletionReason}" th:value="${dr.ordinal()}" th:id="'dr-' + ${dr.ordinal()}"/>
                                 <div class="state p-info-o">
                                     <label class="font-weight-lighter" th:for="'dr-' + ${dr.ordinal()}" th:text="${dr.getText()}">deletion reason</label>
                                 </div>
@@ -29,16 +29,18 @@
                         <!-- comment -->
                         <div class="form-group">
                             <label for="comment">Your feedback matters, so feel free to leave us a comment:</label>
-                            <textarea class="form-control" rows="5" name="comment" id="comment" placeholder="enter your comment" th:pattern="${@environment.getProperty('validation.regex.text-long')}"></textarea>
+                            <textarea class="form-control" rows="5" th:field="*{comment}" id="comment" placeholder="enter your comment"></textarea>
                             <div class="invalid-feedback">Please fill out this field correctly</div>
                         </div>
+                        <div th:replace="fragments/components::backendSpecificObjectFieldErrors('comment')"></div>
                         <hr/>
                         <!-- password -->
                         <div class="form-group">
                             <label class="font-weight-bold" for="password">To complete the deletion, we need you to enter your password:</label>
-                            <input class="form-control" type="password" name="password" id="password" placeholder="enter your password" required />
+                            <input class="form-control" type="password" th:field="*{password}" id="password" placeholder="enter your password" />
                             <div class="invalid-feedback">Please introduce your current password</div>
                         </div>
+                        <div th:replace="fragments/components::backendSpecificObjectFieldErrors('password')"></div>
                         <!-- delete or cancel -->
                         <button th:replace="fragments/components::deleteAccountButton"></button>
                         <a th:replace="fragments/components::cancelButtonToHome"></a>
