added new cart page

--- a/src/main/resources/templates/fragments/components.html
+++ b/src/main/resources/templates/fragments/components.html
@@ -161,7 +161,7 @@
         </div>
 
         <div th:fragment="purchaseButton(subject,action)">
-            <a class="btn btn-outline-info btn-sm my-2 btn-block" th:href="@{/{param1}/{param2}(param1=${subject},param2=${action})}">Purchase</a>
+            <a class="btn btn-outline-info btn-sm my-2 btn-block" th:href="@{/{param1}/{param2}(param1=${subject},param2=${action})}">Check out</a>
         </div>
 
         <!-- login error -->
