--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -75,7 +75,7 @@
                                     </strong>
                                 </div>
                                 <div sec:authorize="!hasRole('ADMIN')">
-                                    <button class="addBook btn btn-outline-info btn-sm" th:id="'ab-' + ${book.id}" data-toggle="tooltip" title="Add to Cart">
+                                    <button class="btn btn-outline-info btn-sm" ajax="addBook" th:id="'ab-' + ${book.id}" data-toggle="tooltip" title="Add to Cart">
                                         <i class="fas fa-cart-plus mx-1 fa-lg"></i>
                                     </button>
                                 </div>
